--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 10px 30px;
-      background-color: #f4f4f4;
+      background-color: #f6fdb8;
     }
   </style>
 </head>
@@ -18,7 +18,7 @@
   <hr>
   <p>Move to Pages</p>
   <li>
-    <a style="text-decoration: none; color: black; font-weight: bold; " href="#">PHP Forms</a>
+    <a style="text-decoration: none; color: black; font-weight: bold; " href="./ConditionalandBool/ConAndBool.php">PHP Conditional and Bools</a>
   </li>
   
 </body>
